--- a/src/app/components/media-player/media-player.component.html
+++ b/src/app/components/media-player/media-player.component.html
@@ -1,18 +1,23 @@
 <div class="media-player">
     @if (!footer()) {
     <img class="media-player-icon" src="icons/icon.svg" width="16" height="16" />
-    }
-    <div class="nodrag media-player-controls">
+
+    <div class="media-player-controls nodrag">
         <button matTooltip="Add to playlist" (click)="addTestSong()" mat-icon-button>
             <mat-icon>playlist_add</mat-icon>
         </button>
 
-        <button (click)="media.rate()" *ngIf="media.current?.type === 'Podcast'" mat-icon-button>
+        @if (media.current?.type === 'Podcast') {
+        <button (click)="media.rate()" mat-icon-button>
             <mat-icon>speed</mat-icon>
         </button>
-        <button (click)="media.rewind(10)" *ngIf="media.current?.type === 'Podcast'" mat-icon-button>
+        }
+
+        @if(media.current?.type === 'Podcast') {
+        <button (click)="media.rewind(10)" mat-icon-button>
             <mat-icon>replay_10</mat-icon>
         </button>
+        }
 
         <button [disabled]="!media.canPrevious" (click)="media.previous()" mat-icon-button>
             <mat-icon>skip_previous</mat-icon>
@@ -32,19 +37,178 @@
         <button [disabled]="!media.canNext" (click)="media.next()" mat-icon-button>
             <mat-icon>skip_next</mat-icon>
         </button>
-        <button (click)="media.forward(10)" *ngIf="media.current?.type === 'Podcast'" mat-icon-button>
+
+        @if(media.current?.type === 'Podcast') {
+        <button (click)="media.forward(10)" mat-icon-button>
             <mat-icon>forward_10</mat-icon>
         </button>
-        <button *ngIf="!media.videoMode && media.muted" mat-icon-button (click)="media.mute()">
+        }
+
+        @if (!media.videoMode && media.muted) {
+        <button mat-icon-button (click)="media.mute()">
             <mat-icon>volume_off</mat-icon>
         </button>
-        <button *ngIf="!media.videoMode && !media.muted" mat-icon-button (click)="media.mute()">
+        }
+
+        @if(!media.videoMode && !media.muted) {
+        <button mat-icon-button (click)="media.mute()">
             <mat-icon>volume_up</mat-icon>
         </button>
+        }
 
         <button (click)="media.pause()" routerLink="/media-queue" mat-icon-button>
             <mat-icon>queue_music</mat-icon>
         </button>
 
     </div>
+    } @else {
+    <div class="media-player-controls">
+
+        @if (!media.videoMode) {
+        <div class="media-info">
+            <img class="music-album" [src]="media.current?.artwork" />
+            <div class="media-info-text hide-small">
+                <div class="music-title">{{ media.current?.title }}</div>
+                <div class="music-artist">{{ media.current?.artist }}</div>
+            </div>
+        </div>
+        }
+
+        @if (media.current?.type === 'YouTube') {
+        <div class="media-info">
+            @if(media.youtubeUrl) {
+            <iframe sandbox="allow-scripts allow-same-origin allow-presentation" id="ytplayer" class="youtube-video"
+                type="text/html" [src]="media.youtubeUrl" frameborder="0" allowfullscreen allow="autoplay"></iframe>
+            }
+        </div>
+        }
+
+        @if(media.current?.type === 'Video') {
+        <div class="media-info">
+            <video class="event-video" controls autoplay="true" preload="none">
+                <source [src]="media.videoUrl" type="video/mp4" />
+            </video>
+        </div>
+        }
+
+        <div class="media-controls">
+            <div class="media-controls-container">
+                @if(media.current?.type === 'Podcast') {
+                <button matTooltip="Change speed" (click)="media.rate()" mat-icon-button>
+                    <mat-icon>speed</mat-icon>
+                </button>
+                }
+
+                @if (media.current?.type === 'Podcast') {
+                <button matTooltip="Skip back 10 seconds" class="hide-small" (click)="media.rewind(10)" mat-icon-button>
+                    <mat-icon>replay_10</mat-icon>
+                </button>
+                }
+
+                <button matTooltip="Previous" [disabled]="!media.canPrevious" (click)="media.previous()"
+                    mat-icon-button>
+                    <mat-icon>skip_previous</mat-icon>
+                </button>
+
+                @if (media.paused) {
+                <button matTooltip="Play" (click)="media.resume()" mat-icon-button>
+                    <mat-icon>play_arrow</mat-icon>
+                </button>
+                }
+
+                @if (!media.paused) {
+                <button matTooltip="Pause" (click)="media.pause()" mat-icon-button>
+                    <mat-icon>pause</mat-icon>
+                </button>
+                }
+
+                <button matTooltip="Next" [disabled]="!media.canNext" (click)="media.next()" mat-icon-button>
+                    <mat-icon>skip_next</mat-icon>
+                </button>
+
+                @if (media.current?.type === 'Podcast') {
+                <button matTooltip="Skip forward 10 seconds" class="hide-small" (click)="media.forward(10)"
+                    mat-icon-button>
+                    <mat-icon>forward_10</mat-icon>
+                </button>
+                }
+            </div>
+            @if(!media.videoMode) {
+            <div class="media-timeline">
+                <div class="media-timeline-1 hide-small">{{media.time | time}}</div>
+                <div class="media-timeline-2">
+                    <mat-slider class="media-slider" discrete [displayWith]="formatLabel" [max]="media.duration"
+                        [min]="0" [step]="1">
+                        <input matSliderThumb [(ngModel)]="media.time" />
+                    </mat-slider>
+                </div>
+                <div class="media-timeline-3 hide-small">{{media.duration | time}}</div>
+            </div>
+            }
+        </div>
+
+        @if (media.videoMode) {
+        <div class="media-audio">
+            <div class="media-audio-container">
+                @if(!expanded) {
+                <button (click)="expanded = true" class="hide-small" mat-icon-button>
+                    <mat-icon>expand_less</mat-icon>
+                </button>
+                }
+
+                @if(expanded) {
+                <button (click)="expanded = false" class="hide-small" mat-icon-button>
+                    <mat-icon>expand_more</mat-icon>
+                </button>
+                }
+
+                <!-- @if (!maximized) {
+                <button (click)="maximized = true" class="hide-small" mat-icon-button>
+                    <mat-icon>open_in_full</mat-icon>
+                </button>
+                }
+
+                @if (maximized) {
+                <button (click)="maximized = false" class="hide-small" mat-icon-button>
+                    <mat-icon>open_in_full</mat-icon>
+                </button>
+                } -->
+
+                <button matTooltip="Queue" routerLink="/queue" class="hide-small" mat-icon-button>
+                    <mat-icon>queue_music</mat-icon>
+                </button>
+                <button matTooltip="Exit Media Player" (click)="media.exit()" mat-icon-button>
+                    <mat-icon>close</mat-icon>
+                </button>
+            </div>
+        </div>
+        }
+
+        @if(!media.videoMode) {
+        <div class="media-audio">
+            <div class="media-audio-container">
+                @if (media.muted) {
+                <button matTooltip="Mute" class="hide-small" mat-icon-button (click)="media.mute()">
+                    <mat-icon>volume_off</mat-icon>
+                </button>
+                }
+
+                @if(!media.muted) {
+                <button matTooltip="Unmute" class="hide-small" mat-icon-button (click)="media.mute()">
+                    <mat-icon>volume_up</mat-icon>
+                </button>
+                }
+
+                <button matTooltip="Queue" routerLink="/queue" class="hide-small" mat-icon-button>
+                    <mat-icon>queue_music</mat-icon>
+                </button>
+
+                <button matTooltip="Exit Media Player" (click)="media.exit()" mat-icon-button>
+                    <mat-icon>close</mat-icon>
+                </button>
+            </div>
+        </div>
+        }
+    </div>
+    }
 </div>
