--- a/src/app/components/media-player/media-player.component.scss
+++ b/src/app/components/media-player/media-player.component.scss
@@ -1,7 +1,7 @@
 :host {
     background: var(--theme-background-color, var(--mat-toolbar-container-background-color, var(--mat-sys-surface)));
     height: 33px;
-    
+
     &:not(.footer-mode) {
         /* Toolbar mode - fixed position with window controls overlay support */
         position: fixed;
@@ -13,22 +13,26 @@
         width: env(titlebar-area-width, 100%);
         /* Use the environment variable for setting the height with a fallback. */
         height: env(titlebar-area-height, 33px);
-        
+
         -webkit-app-region: drag;
         app-region: drag;
     }
-      &.footer-mode {
-        /* Footer mode - sticky position at bottom of content */
-        position: sticky;
-        bottom: 0;
+
+    &.footer-mode {
+        /* Footer mode - fixed at bottom of mat-sidenav-content */
+        position: relative;
         width: 100%;
         height: 80px;
         border-top: 1px solid var(--mat-sys-outline-variant);
-        z-index: 100;
-        
+        flex-shrink: 0;
+        /* Prevent the footer from shrinking */
+
         /* Remove drag behavior for footer mode */
         -webkit-app-region: none;
         app-region: none;
+
+        display: flex;
+        flex-direction: row;
     }
 }
 
@@ -36,7 +40,7 @@
     display: flex;
     height: 100%;
     align-items: center;
-    
+
     .footer-mode & {
         justify-content: center;
         padding: 12px 0;
@@ -51,13 +55,15 @@
 
 .media-player-controls {
     margin-top: -4px;
-    
+
     .footer-mode & {
         margin-top: 0;
-        display: flex;
+        display: flex !important;
         align-items: center;
         justify-content: center;
         gap: 8px;
+        color: red;
+        background-color: green;
     }
 }
 
@@ -86,7 +92,7 @@ input {
 
 // @media (display-mode: window-controls-overlay) {
 //     :host {
-//         display: none;
+//         |none;
 //         background-color: green;
 //     }
 // }
@@ -97,3 +103,155 @@ input {
 //         display: none;
 //     }
 // }
+
+// .media-player-small {
+//     height: env(titlebar-area-height, 33px) !important;
+// }
+
+/* .draggable {
+  -webkit-app-region: drag;
+  flex-grow: 2;
+  flex-shrink: 1;
+} */
+
+
+.media-controls-container {
+    align-self: center;
+    flex: 2 2 auto;
+    -webkit-app-region: no-drag;
+}
+
+.media-audio-container {
+    align-self: center;
+    flex: 2 2 auto;
+}
+
+.media-player-small .media-controls-container {
+    align-self: flex-start;
+}
+
+.media-player-small .media-controls {
+    flex-grow: 0;
+    flex-shrink: 0;
+    text-align: left;
+}
+
+.media-info {
+    flex: 1 1 calc(33%);
+    display: flex;
+    flex-direction: row;
+}
+
+.media-controls {
+    flex: 2 2 auto;
+    width: 360px;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.media-player-small .media-controls {
+    width: auto;
+}
+
+.media-audio {
+    padding-right: 1.4em;
+    flex: 1 1 calc(33%);
+    display: flex;
+    text-align: right;
+}
+
+.music-album {
+    height: 100%;
+}
+
+.music-title {
+    font-size: 0.8em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    font-weight: 700;
+    margin-bottom: 0.4em;
+}
+
+.music-artist {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 0.65em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+
+.media-info-text {
+    padding: 0.8em;
+    align-self: center;
+}
+
+.media-timeline {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    font-size: 0.8em;
+    justify-content: center;
+}
+
+.media-timeline-1 {
+    flex: 1 1 auto;
+    width: 100px;
+    align-self: center;
+}
+
+.media-timeline-2 {
+    flex: 2 2 auto;
+    align-self: center;
+}
+
+.media-timeline-3 {
+    flex: 1 1 auto;
+    width: 100px;
+    align-self: center;
+}
+
+.youtube-video {
+    width: 100%;
+    display: inline-block;
+    margin-top: 0.2em;
+    aspect-ratio: 16 / 9;
+}
+
+.media-player-large {
+    height: 256px;
+}
+
+.media-player-maximized {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 1000;
+    height: 100%;
+}
+
+.floating-maximize {
+    position: absolute;
+    right: 10px;
+    top: 80px;
+    z-index: 1001;
+}
+
+.media-player-logo {
+    margin-left: 6px;
+}
+
+@media only screen and (min-height: 201px) {
+    .media-player-logo {
+        display: none;
+    }
+}
