--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <div class="app-container" [class.dark-theme]="themeService.darkMode()">
 
   <app-media-player></app-media-player>
-  <app-video-player></app-video-player>
+  <!-- <app-video-player></app-video-player> -->
 
   <!-- Loading overlay -->
   @if (appState.isLoading()) {
