--- a/src/app/components/video-player/video-player.component.html
+++ b/src/app/components/video-player/video-player.component.html
@@ -38,12 +38,12 @@
   <div class="video-content">
     @if(media.current?.type === 'YouTube') {
     <div class="media-info">
-        @if(media.youtubeUrl) {
+        @if(media.youtubeUrl()) {
         <iframe sandbox="allow-scripts allow-same-origin allow-presentation" 
                 id="ytplayer" 
                 class="youtube-video"
                 type="text/html" 
-                [src]="media.youtubeUrl" 
+                [src]="media.youtubeUrl()" 
                 frameborder="0" 
                 allowfullscreen 
                 allow="autoplay"></iframe>
