feat: Implement fullscreen video functionality with global container and exit controls

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -439,3 +439,10 @@
   }
 
 </div>
+
+<!-- Global fullscreen video container -->
+<div id="global-fullscreen-container" class="global-fullscreen-video" style="display: none;">
+  <button class="fullscreen-minimize-button" (click)="exitFullscreen()" aria-label="Exit fullscreen">
+    <mat-icon>close</mat-icon>
+  </button>
+</div>
