--- a/src/app/components/media-player/media-player.component.scss
+++ b/src/app/components/media-player/media-player.component.scss
@@ -48,6 +48,7 @@
     align-items: center;
     justify-content: center;
     // padding: 12px 0;
+    overflow: hidden;
 }
 
 .media-player-icon {
@@ -142,19 +143,6 @@ input {
 .video-controls {
     display: flex;
     flex-direction: column;
-}
-
-.event-video.fullscreen {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    // display: block;
-    // object-fit: contain;
-    z-index: 5000;
 }
 
 .media-controls {
