feat: Add video ended event handling and cleanup for media player

--- a/src/app/components/media-player/media-player.component.html
+++ b/src/app/components/media-player/media-player.component.html
@@ -102,6 +102,7 @@
                    preload="metadata"
                    (loadeddata)="registerVideoElement()"
                    (canplay)="registerVideoElement()"
+                   (ended)="onVideoEnded()"
                    (error)="onVideoError($event)">
             </video>
             }
