feat: Update media player functionality with footer display and cleanup improvements

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -346,14 +346,16 @@
         </mat-nav-list> -->
         }
       </div>
-    </mat-sidenav>    <!-- Main content container -->
+    </mat-sidenav> <!-- Main content container -->
     <mat-sidenav-content>
       <!-- Page content -->
       <div class="content-wrapper">
         <router-outlet></router-outlet>
       </div>
       <!-- Footer media player outside scrollable content -->
+      @if (layout.showMediaPlayer()) {
       <app-media-player [footer]="true"></app-media-player>
+      }
     </mat-sidenav-content>
   </mat-sidenav-container>
   }
