--- a/src/app/components/media-player/media-player.component.html
+++ b/src/app/components/media-player/media-player.component.html
@@ -217,7 +217,7 @@
                 </button>
                 }
 
-                <button matTooltip="Queue" routerLink="/queue" class="hide-small" mat-icon-button>
+                <button matTooltip="Queue" routerLink="/media-queue" class="hide-small" mat-icon-button>
                     <mat-icon>queue_music</mat-icon>
                 </button>
 
