--- a/src/app/app.html
+++ b/src/app/app.html
@@ -126,9 +126,20 @@
       </button> -->
     </mat-menu>
 
-    <button mat-icon-button (click)="toggleAppsSidenav()">
+    <button mat-icon-button [matMenuTriggerFor]="menuApps">
       <mat-icon>apps</mat-icon>
     </button>
+
+    <mat-menu #menuApps="matMenu">
+      <button mat-menu-item routerLink="/media-queue">
+        <mat-icon>queue_music</mat-icon>
+        <span>Media Queue</span>
+      </button>
+      <button mat-menu-item (click)="toggleMediaPlayer();">
+        <mat-icon>dock_to_bottom</mat-icon>
+        <span>Media Player</span>
+      </button>
+    </mat-menu>
 
     <button mat-icon-button (click)="toggleProfileSidenav()" aria-label="Toggle profile" class="profile-button">
       @if (accountMetadata()?.data?.picture) {
@@ -210,7 +221,7 @@
       </mat-nav-list>
     </mat-sidenav>
 
-    <!-- Profile sidenav (right side) -->
+
     <mat-sidenav #profileSidenav position="end" class="profile-sidenav" mode="over">
       <!-- <mat-toolbar>
         <span>Profile</span>
@@ -349,31 +360,6 @@
           </a>
         </mat-nav-list> -->
         }
-      </div>
-    </mat-sidenav> <!-- Main content container -->
-
-    <mat-sidenav #appsSidenav position="end" class="profile-sidenav" mode="over">
-      <!-- <mat-toolbar>
-        <span>Profile</span>
-        <span class="toolbar-spacer"></span>
-        
-      </mat-toolbar> -->
-      <div class="profile-content">
-        <button class="close-button" mat-icon-button (click)="toggleAppsSidenav()">
-          <mat-icon>close</mat-icon>
-        </button>
-
-        <mat-nav-list class="apps-list">
-          <a mat-list-item routerLink="/media-queue" routerLink="/media-queue" (click)="toggleAppsSidenav()">
-            <mat-icon matListItemIcon>queue_music</mat-icon>
-            <span>Media Queue</span>
-          </a>
-            <a mat-list-item routerLink="/media-queue" (click)="toggleMediaPlayer();toggleAppsSidenav()">
-            <mat-icon matListItemIcon>dock_to_bottom</mat-icon>
-            <span>Media Player</span>
-          </a>
-        </mat-nav-list>
-        <mat-divider></mat-divider>
       </div>
     </mat-sidenav>
 
