feat: Update video source binding and enhance bookmark tooltip functionality

--- a/src/app/components/video-player/video-player.component.html
+++ b/src/app/components/video-player/video-player.component.html
@@ -54,7 +54,7 @@
     @if(media.current?.type === 'Video') {
     <div class="media-info">
         <video class="event-video" controls autoplay="true" preload="none">
-            <source [src]="media.videoUrl" type="video/mp4" />
+            <source [src]="media.videoUrl()" type="video/mp4" />
         </video>
     </div>
     }
