feat: Refactor utility functions into UtilitiesService.

--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -1,9 +1,11 @@
 <h1></h1>
 
-@let item = event();
+<app-event [id]="id()"></app-event>
+
+<!-- @let item = event();
 
 @if (item) {
 
     {{ item.content}}
 
-}
+} -->
