--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -11,6 +11,11 @@
     }
 </div>
 
+@if (reposts()) {
+    <mat-icon>repeat</mat-icon>
+    {{ reposts().length }}
+}
+
 
 @if (error() ) { <div class="warn">
 {{ error() }}
